2007-04-29  Johan Dahlin  <johan@gnome.org>

	* gobject/pygtype.c: (pyg_value_array_from_pyobject):
	* tests/test_gtype.py:
	* tests/testhelpermodule.c: (_wrap_test_value_array):

	Treat None in a GValueArray as pointer/NULL, patch by
	Ed Catmur, fixes #352209.

2007-04-29  Loïc Minier  <lool+gnome@via.ecp.fr>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* autogen.sh:

	Use dirname $0 instead of pwd to compute srcdir in autogen,
	fixes #409234
	
2007-04-29  Damien Carbery <damien.carbery@sun.com>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* tests/test-unknown.c: (test_interface_iface_method):

	Do not return in a void function, fixes #385127

2007-04-29  Johan Dahlin  <johan@gnome.org>

	* gobject/pygflags.c: (pyg_flags_from_gtype):
	Fix leak, patch by Daniel Berrange. Fixes #428726 (Phil Dumont)

2007-04-29  Damien Carbery <damien.carbery@sun.com>

	reviewed by: Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* pygobject-2.0-uninstalled.pc.in:

	Add an uninstalled pkg-config file, fixes #385129

2007-04-29  Johan Dahlin  <johan@gnome.org>

	* README: 
	* configure.ac:
	* gobject/Makefile.am:
	* gobject/ffi-marshaller.c: (g_value_to_ffi_type),
	(g_value_from_ffi_type), (g_cclosure_marshal_generic_ffi):
	* gobject/ffi-marshaller.h:
	* gobject/gobjectmodule.c: (create_signal), (init_gobject):
	* pygobject-2.0.pc.in:
	* tests/test_signal.py:
	* tests/testhelpermodule.c: (test1_callback),
	(test1_callback_swapped), (test2_callback), (test3_callback),
	(test4_callback), (test_float_callback), (test_double_callback),
	(test_string_callback), (test_object_callback), (connectcallbacks),
	(_wrap_connectcallbacks), (inittesthelper):

	Add a generic CClosure marshaller based on ffi. 
	This makes it possible to connect to signals on PyGObjects from C.
	libffi is now an optional dependency
	Fixes #353816 (Edward Hervey)

2007-04-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* configure.ac: Post-release version bump.

=== 2.13.0 ===